Fixes small spacing issue with background positioning element

--- a/src/App.scss
+++ b/src/App.scss
@@ -96,7 +96,7 @@ input[type=number] {
   line-height: 0;
   overflow: hidden;
   position: absolute;
-  top: 922px;
+  top: 917px;
   width: 100%;
 }
 
